<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_add_new">Add new account</string>
    <string name="account_label">Account</string>
    <string name="account_live">LIVE</string>
    <string name="account_page_subtitle">Switch the game profile you launch into.</string>
    <string name="account_page_title">Accounts</string>
    <string name="account_state_active">Active</string>
    <string name="account_state_manage">Tap to manage</string>
    <string name="action_settings">Settings</string>
    <string name="active_account">Active</string>
    <string name="add_account">Add Account</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_icon">default icon</string>
    <string name="app_name">Ninja</string>
    <string name="app_subtitle">ENGINE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_label">Application</string>
    <string name="black_box_service_name">:black</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="build_label">Build</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cd_edit_name">Edit name</string>
    <string name="cd_energy_ring">Energy ring</string>
    <string name="cd_expand">Expand</string>
    <string name="cd_notifications">Notifications</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="clear_fields">Clear fields</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard_empty">Clipboard is empty or invalid format</string>
    <string name="close_dialog">Close</string>
    <string name="contact_reseller_title">Contact Reseller</string>
    <string name="copyright">© Ninja</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_rename_hint">Account name</string>
    <string name="dialog_rename_title">Rename Account</string>
    <string name="dialog_save">Save</string>
    <string name="download_failed">Download failed, tap to retry</string>
    <string name="engine_not_ready">Engine not ready yet, please try again</string>
    <string name="enter_your_activation_key">Enter your activation key</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_to_start">Failed to start 8 Ball Pool</string>
    <string name="find_reseller">Official Resellers</string>
    <string name="fk_disabled_message">Join Telegram channel for updates</string>
    <string name="fk_join_channel">Join Channel</string>
    <string name="game_not_found">Game not found</string>
    <string name="game_ready">8 Ball Pool is ready</string>
    <string name="guest_login">Guest</string>
    <string name="hello_world">Hello world!</string>
    <string name="hero_title">8 Ball Pool</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_sub_active">Premium · Active</string>
    <string name="home_subscription">SUBSCRIPTION</string>
    <string name="home_unit_days">Days</string>
    <string name="home_unit_hours">Hrs</string>
    <string name="home_unit_minutes">Min</string>
    <string name="home_welcome_back">Welcome back</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="install_and_launch">Install &amp; Launch</string>
    <string name="install_from_play_store">Please install 8 Ball Pool from Play Store</string>
    <string name="install_from_play_store_short">Please install 8 Ball Pool From Play Store</string>
    <string name="installing_btn">Installing…</string>
    <string name="installing_game">Installing 8 Ball Pool…</string>
    <string name="item_view_role_description">Tab</string>
    <string name="key_activation_country_restricted">This key is not available in your country</string>
    <string name="key_activation_expired">Your activation key has expired</string>
    <string name="key_activation_required">Username and password are required</string>
    <string name="key_activation_used_on_another_device">This key is already used on another device</string>
    <string name="key_activation_wrong">Invalid activation key</string>
    <string name="language_label">Language</string>
    <string name="launch_error">Launch error: %s</string>
    <string name="launch_game">Launch 8 Ball Pool</string>
    <string name="launching_btn">Launching…</string>
    <string name="launching_game">Launching 8 Ball Pool…</string>
    <string name="link_not_available_now">Download link is not available right now</string>
    <string name="loading">Loading…</string>
    <string name="loading_resellers">Loading resellers…</string>
    <string name="login">Login</string>
    <string name="login_tagline">8 Ball Pool companion</string>
    <string name="login_welcome_sub">Enter your activation key to continue</string>
    <string name="logout">Logout</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="maintenance_message">Service is under maintenance, please try later</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="no_resellers">No resellers available at the moment</string>
    <string name="resellers_list_title">Authorized Resellers</string>
    <string name="resellers_warning">"Only purchase from authorized resellers.
Beware of scams and unauthorized sellers."</string>
    <string name="settings_subtitle">Tune the app to your setup.</string>
    <string name="settings_title">Settings</string>
    <string name="status_active">Active</string>
    <string name="status_label">Status</string>
    <string name="subscription_expires_in">License expires in</string>
    <string name="telegram">Telegram</string>
    <string name="timer_days">DAYS</string>
    <string name="timer_hours">HRS</string>
    <string name="timer_minutes">MIN</string>
    <string name="timer_seconds">SEC</string>
    <string name="username_label">Username</string>
    <string name="version_code">Release</string>
    <string name="version_label">Version</string>
    <string name="version_name">v2.1.0</string>
</resources>