<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_update_dialog" android:padding="24.0dp" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_rename_title" />
    <EditText android:textSize="16.0sp" android:textColor="@color/white" android:textColorHint="@color/text_hint" android:id="@id/et_rename" android:background="@drawable/bg_input_dark" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:layout_width="match_parent" android:layout_height="48.0dp" android:layout_marginTop="16.0dp" android:hint="@string/dialog_rename_hint" android:maxLines="1" android:inputType="text" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dp">
        <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/btn_cancel" android:layout_width="0.0dp" android:layout_height="45.0dp" android:text="@string/dialog_cancel" android:layout_weight="1.0" app:cornerRadius="12.0dp" app:strokeColor="@color/secondary_text" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/btn_save" android:layout_width="0.0dp" android:layout_height="45.0dp" android:text="@string/dialog_save" android:layout_weight="1.0" android:layout_marginStart="12.0dp" android:backgroundTint="@color/PrimaryColor" app:cornerRadius="12.0dp" />
    </LinearLayout>
</LinearLayout>
