<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_gradient_dark" android:paddingTop="14.0dp" android:paddingBottom="112.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="20.0dp" android:paddingEnd="20.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/account_page_title" />
    <TextView android:textSize="14.0sp" android:textColor="@color/text_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginBottom="18.0dp" android:text="@string/account_page_subtitle" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_accounts" android:paddingBottom="12.0dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0" android:overScrollMode="never" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/btn_add_account" android:background="@drawable/bg_dashed_add" android:paddingTop="16.0dp" android:paddingBottom="16.0dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:layerType="software">
        <ImageView android:layout_width="20.0dp" android:layout_height="20.0dp" android:src="@drawable/ic_plus" android:contentDescription="@string/account_add_new" android:layout_marginEnd="10.0dp" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/accent_purple_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_add_new" />
    </LinearLayout>
</LinearLayout>
