<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_gradient_dark" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/splash_logo" android:layout_width="311.0dp" android:layout_height="448.0dp" android:scaleType="fitCenter" android:adjustViewBounds="true" android:contentDescription="@string/app_name" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.16" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.26" />
    <com.ninja.engine.view.widgets.SlashRevealTextView android:textSize="45.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/splash_app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:letterSpacing="0.25" app:layout_constraintBottom_toBottomOf="@id/splash_logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/splash_logo" app:layout_constraintVertical_bias="1.0" />
    <com.ninja.engine.view.widgets.SlashRevealTextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/text_subtitle" android:id="@id/splash_app_name_sub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/app_subtitle" android:letterSpacing="0.5" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/splash_app_name" app:slashStagger="0" app:slashStartDelay="3000" app:slashUniformAngle="90.0" />
    <ProgressBar android:id="@id/splash_progress" android:visibility="gone" android:layout_width="28.0dp" android:layout_height="28.0dp" android:layout_marginBottom="80.0dp" android:indeterminate="true" android:indeterminateTint="@color/accent_purple" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/copyright_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <TextView android:textSize="11.0sp" android:textColor="@color/text_subtitle" android:id="@id/version_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version_name" />
        <TextView android:textSize="11.0sp" android:textColor="@color/text_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copyright" android:layout_marginStart="6.0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
